filebeat/input/syslog/parser.go
//line parser.rl:1
// Code generated by ragel DO NOT EDIT.
package syslog

import "fmt"

//line parser.go:8
const syslog_start int = 0
const syslog_first_final int = 2
const syslog_error int = -1

const syslog_en_main int = 0
const syslog_en_catch_all int = 1

//line parser.rl:9

var (
	noDuplicates = []byte{'-', '.'}
)

// Parse parses Syslog events.
func Parse(data []byte, event *event) {
	var p, cs int
	pe := len(data)
	tok := 0
	eof := len(data)

//line parser.go:31
	{
		cs = syslog_start
	}

//line parser.go:36
	{
		if (p) == (pe) {
			goto _test_eof
		}
		switch cs {
		case 0:
			goto st_case_0
		case 2:
			goto st_case_2
		case 3:
			goto st_case_3
		case 4:
			goto st_case_4
		case 5:
			goto st_case_5
		case 6:
			goto st_case_6
		case 7:
			goto st_case_7
		case 8:
			goto st_case_8
		case 9:
			goto st_case_9
		case 10:
			goto st_case_10
		case 11:
			goto st_case_11
		case 12:
			goto st_case_12
		case 13:
			goto st_case_13
		case 14:
			goto st_case_14
		case 15:
			goto st_case_15
		case 16:
			goto st_case_16
		case 17:
			goto st_case_17
		case 18:
			goto st_case_18
		case 19:
			goto st_case_19
		case 20:
			goto st_case_20
		case 21:
			goto st_case_21
		case 22:
			goto st_case_22
		case 23:
			goto st_case_23
		case 24:
			goto st_case_24
		case 25:
			goto st_case_25
		case 26:
			goto st_case_26
		case 27:
			goto st_case_27
		case 28:
			goto st_case_28
		case 29:
			goto st_case_29
		case 30:
			goto st_case_30
		case 31:
			goto st_case_31
		case 32:
			goto st_case_32
		case 33:
			goto st_case_33
		case 34:
			goto st_case_34
		case 35:
			goto st_case_35
		case 36:
			goto st_case_36
		case 37:
			goto st_case_37
		case 38:
			goto st_case_38
		case 39:
			goto st_case_39
		case 40:
			goto st_case_40
		case 41:
			goto st_case_41
		case 42:
			goto st_case_42
		case 43:
			goto st_case_43
		case 44:
			goto st_case_44
		case 45:
			goto st_case_45
		case 46:
			goto st_case_46
		case 47:
			goto st_case_47
		case 48:
			goto st_case_48
		case 49:
			goto st_case_49
		case 50:
			goto st_case_50
		case 51:
			goto st_case_51
		case 52:
			goto st_case_52
		case 53:
			goto st_case_53
		case 54:
			goto st_case_54
		case 55:
			goto st_case_55
		case 56:
			goto st_case_56
		case 57:
			goto st_case_57
		case 58:
			goto st_case_58
		case 59:
			goto st_case_59
		case 60:
			goto st_case_60
		case 61:
			goto st_case_61
		case 62:
			goto st_case_62
		case 63:
			goto st_case_63
		case 64:
			goto st_case_64
		case 65:
			goto st_case_65
		case 66:
			goto st_case_66
		case 67:
			goto st_case_67
		case 68:
			goto st_case_68
		case 69:
			goto st_case_69
		case 70:
			goto st_case_70
		case 71:
			goto st_case_71
		case 72:
			goto st_case_72
		case 73:
			goto st_case_73
		case 74:
			goto st_case_74
		case 75:
			goto st_case_75
		case 76:
			goto st_case_76
		case 77:
			goto st_case_77
		case 78:
			goto st_case_78
		case 79:
			goto st_case_79
		case 80:
			goto st_case_80
		case 81:
			goto st_case_81
		case 82:
			goto st_case_82
		case 83:
			goto st_case_83
		case 84:
			goto st_case_84
		case 85:
			goto st_case_85
		case 86:
			goto st_case_86
		case 87:
			goto st_case_87
		case 88:
			goto st_case_88
		case 89:
			goto st_case_89
		case 90:
			goto st_case_90
		case 91:
			goto st_case_91
		case 92:
			goto st_case_92
		case 93:
			goto st_case_93
		case 94:
			goto st_case_94
		case 95:
			goto st_case_95
		case 96:
			goto st_case_96
		case 97:
			goto st_case_97
		case 98:
			goto st_case_98
		case 99:
			goto st_case_99
		case 100:
			goto st_case_100
		case 101:
			goto st_case_101
		case 102:
			goto st_case_102
		case 103:
			goto st_case_103
		case 104:
			goto st_case_104
		case 105:
			goto st_case_105
		case 106:
			goto st_case_106
		case 107:
			goto st_case_107
		case 108:
			goto st_case_108
		case 109:
			goto st_case_109
		case 110:
			goto st_case_110
		case 111:
			goto st_case_111
		case 112:
			goto st_case_112
		case 113:
			goto st_case_113
		case 114:
			goto st_case_114
		case 115:
			goto st_case_115
		case 116:
			goto st_case_116
		case 117:
			goto st_case_117
		case 118:
			goto st_case_118
		case 119:
			goto st_case_119
		case 1:
			goto st_case_1
		case 120:
			goto st_case_120
		}
		goto st_out
	st_case_0:
		switch data[(p)] {
		case 60:
			goto tr2
		case 65:
			goto tr3
		case 68:
			goto tr4
		case 70:
			goto tr5
		case 74:
			goto tr6
		case 77:
			goto tr7
		case 78:
			goto tr8
		case 79:
			goto tr9
		case 83:
			goto tr10
		}
		if 48 <= data[(p)] && data[(p)] <= 57 {
			goto tr1
		}
		goto tr0
	tr0:
//line common.rl:3

		fmt.Println(tok)
		fmt.Println(p)
		fmt.Println("---")
		tok = p

		goto st2
	tr75:
//line common.rl:81

		event.SetSequence(data[tok:p])

//line common.rl:3

		fmt.Println(tok)
		fmt.Println(p)
		fmt.Println("---")
		tok = p

		goto st2
	st2:
		if (p)++; (p) == (pe) {
			goto _test_eof2
		}
	st_case_2:
//line parser.go:338
		goto st2
	tr1:
//line common.rl:3

		fmt.Println(tok)
		fmt.Println(p)
		fmt.Println("---")
		tok = p

		goto st3
	st3:
		if (p)++; (p) == (pe) {
			goto _test_eof3
		}
	st_case_3:
//line parser.go:354
		if data[(p)] == 58 {
			goto st48
		}
		if 48 <= data[(p)] && data[(p)] <= 57 {
			goto st4
		}
		goto st2
	st4:
		if (p)++; (p) == (pe) {
			goto _test_eof4
		}
	st_case_4:
		if data[(p)] == 58 {
			goto st48
		}
		if 48 <= data[(p)] && data[(p)] <= 57 {
			goto st5
		}
		goto st2
	st5:
		if (p)++; (p) == (pe) {
			goto _test_eof5
		}
	st_case_5:
		if data[(p)] == 58 {
			goto st48
		}
		if 48 <= data[(p)] && data[(p)] <= 57 {
			goto st6
		}
		goto st2
	st6:
		if (p)++; (p) == (pe) {
			goto _test_eof6
		}
	st_case_6:
		switch data[(p)] {
		case 45:
			goto tr17
		case 58:
			goto st48
		}
		if 48 <= data[(p)] && data[(p)] <= 57 {
			goto st47
		}
		goto st2
	tr17:
//line common.rl:22

		event.SetYear(data[tok:p])

		goto st7
	st7:
		if (p)++; (p) == (pe) {
			goto _test_eof7
		}
	st_case_7:
//line parser.go:412
		if 48 <= data[(p)] && data[(p)] <= 57 {
			goto tr19
		}
		goto st2
	tr19:
//line common.rl:3

		fmt.Println(tok)
		fmt.Println(p)
		fmt.Println("---")
		tok = p

		goto st8
	st8:
		if (p)++; (p) == (pe) {
			goto _test_eof8
		}
	st_case_8:
//line parser.go:431
		if 48 <= data[(p)] && data[(p)] <= 57 {
			goto st9
		}
		goto st2
	st9:
		if (p)++; (p) == (pe) {
			goto _test_eof9
		}
	st_case_9:
		if data[(p)] == 45 {
			goto tr21
		}
		goto st2
	tr21:
//line common.rl:26

		event.SetMonthNumeric(data[tok:p])

		goto st10
	st10:
		if (p)++; (p) == (pe) {
			goto _test_eof10
		}
	st_case_10:
//line parser.go:456
		if 48 <= data[(p)] && data[(p)] <= 51 {
			goto tr22
		}
		goto st2
	tr22:
//line common.rl:3

		fmt.Println(tok)
		fmt.Println(p)
		fmt.Println("---")
		tok = p

		goto st11
	st11:
		if (p)++; (p) == (pe) {
			goto _test_eof11
		}
	st_case_11:
//line parser.go:475
		if 48 <= data[(p)] && data[(p)] <= 57 {
			goto st12
		}
		goto st2
	st12:
		if (p)++; (p) == (pe) {
			goto _test_eof12
		}
	st_case_12:
		switch data[(p)] {
		case 32:
			goto tr24
		case 84:
			goto tr24
		case 116:
			goto tr24
		}
		if 9 <= data[(p)] && data[(p)] <= 13 {
			goto tr24
		}
		goto st2
	tr24:
//line common.rl:30

		event.SetDay(data[tok:p])

		goto st13
	st13:
		if (p)++; (p) == (pe) {
			goto _test_eof13
		}
	st_case_13:
//line parser.go:508
		if data[(p)] == 50 {
			goto tr26
		}
		if 48 <= data[(p)] && data[(p)] <= 49 {
			goto tr25
		}
		goto st2
	tr25:
//line common.rl:3

		fmt.Println(tok)
		fmt.Println(p)
		fmt.Println("---")
		tok = p

		goto st14
	st14:
		if (p)++; (p) == (pe) {
			goto _test_eof14
		}
	st_case_14:
//line parser.go:530
		if 48 <= data[(p)] && data[(p)] <= 57 {
			goto st15
		}
		goto st2
	st15:
		if (p)++; (p) == (pe) {
			goto _test_eof15
		}
	st_case_15:
		if data[(p)] == 58 {
			goto tr28
		}
		goto st2
	tr28:
//line common.rl:34

		event.SetHour(data[tok:p])

		goto st16
	st16:
		if (p)++; (p) == (pe) {
			goto _test_eof16
		}
	st_case_16:
//line parser.go:555
		if 48 <= data[(p)] && data[(p)] <= 53 {
			goto tr29
		}
		goto st2
	tr29:
//line common.rl:3

		fmt.Println(tok)
		fmt.Println(p)
		fmt.Println("---")
		tok = p

		goto st17
	st17:
		if (p)++; (p) == (pe) {
			goto _test_eof17
		}
	st_case_17:
//line parser.go:574
		if 48 <= data[(p)] && data[(p)] <= 57 {
			goto st18
		}
		goto st2
	st18:
		if (p)++; (p) == (pe) {
			goto _test_eof18
		}
	st_case_18:
		if data[(p)] == 58 {
			goto tr31
		}
		goto st2
	tr31:
//line common.rl:38

		event.SetMinute(data[tok:p])

		goto st19
	st19:
		if (p)++; (p) == (pe) {
			goto _test_eof19
		}
	st_case_19:
//line parser.go:599
		if 48 <= data[(p)] && data[(p)] <= 53 {
			goto tr32
		}
		goto st2
	tr32:
//line common.rl:3

		fmt.Println(tok)
		fmt.Println(p)
		fmt.Println("---")
		tok = p

		goto st20
	st20:
		if (p)++; (p) == (pe) {
			goto _test_eof20
		}
	st_case_20:
//line parser.go:618
		if 48 <= data[(p)] && data[(p)] <= 57 {
			goto st21
		}
		goto st2
	st21:
		if (p)++; (p) == (pe) {
			goto _test_eof21
		}
	st_case_21:
		switch data[(p)] {
		case 32:
			goto tr34
		case 43:
			goto tr35
		case 45:
			goto tr35
		case 46:
			goto tr36
		case 58:
			goto tr37
		case 90:
			goto tr38
		case 122:
			goto tr38
		}
		if 9 <= data[(p)] && data[(p)] <= 13 {
			goto tr34
		}
		goto st2
	tr34:
//line common.rl:42

		event.SetSecond(data[tok:p])

		goto st22
	tr61:
//line common.rl:77

		event.SetTimeZone(data[tok:p])

		goto st22
	tr68:
//line common.rl:46

		event.SetNanosecond(data[tok:p])

		goto st22
	st22:
		if (p)++; (p) == (pe) {
			goto _test_eof22
		}
	st_case_22:
//line parser.go:671
		switch data[(p)] {
		case 58:
			goto tr41
		case 95:
			goto tr39
		}
		switch {
		case data[(p)] < 48:
			if 45 <= data[(p)] && data[(p)] <= 46 {
				goto tr39
			}
		case data[(p)] > 57:
			switch {
			case data[(p)] > 90:
				if 97 <= data[(p)] && data[(p)] <= 122 {
					goto tr40
				}
			case data[(p)] >= 65:
				goto tr40
			}
		default:
			goto tr40
		}
		goto tr0
	tr39:
//line common.rl:3

		fmt.Println(tok)
		fmt.Println(p)
		fmt.Println("---")
		tok = p

//line common.rl:54

		if p-1 > 0 {
			for _, b := range noDuplicates {
				if data[p] == b && data[p-1] == b {
					p = tok - 1
					{
						goto st1
					}
				}
			}
		}

		goto st23
	tr42:
//line common.rl:54

		if p-1 > 0 {
			for _, b := range noDuplicates {
				if data[p] == b && data[p-1] == b {
					p = tok - 1
					{
						goto st1
					}
				}
			}
		}

		goto st23
	st23:
		if (p)++; (p) == (pe) {
			goto _test_eof23
		}
	st_case_23:
//line parser.go:734
		switch data[(p)] {
		case 58:
			goto tr44
		case 95:
			goto tr42
		}
		switch {
		case data[(p)] < 48:
			if 45 <= data[(p)] && data[(p)] <= 46 {
				goto tr42
			}
		case data[(p)] > 57:
			switch {
			case data[(p)] > 90:
				if 97 <= data[(p)] && data[(p)] <= 122 {
					goto tr43
				}
			case data[(p)] >= 65:
				goto tr43
			}
		default:
			goto tr43
		}
		goto st2
	tr40:
//line common.rl:3

		fmt.Println(tok)
		fmt.Println(p)
		fmt.Println("---")
		tok = p

//line common.rl:54

		if p-1 > 0 {
			for _, b := range noDuplicates {
				if data[p] == b && data[p-1] == b {
					p = tok - 1
					{
						goto st1
					}
				}
			}
		}

		goto st24
	tr43:
//line common.rl:54

		if p-1 > 0 {
			for _, b := range noDuplicates {
				if data[p] == b && data[p-1] == b {
					p = tok - 1
					{
						goto st1
					}
				}
			}
		}

		goto st24
	st24:
		if (p)++; (p) == (pe) {
			goto _test_eof24
		}
	st_case_24:
//line parser.go:797
		switch data[(p)] {
		case 32:
			goto tr45
		case 58:
			goto tr46
		case 95:
			goto tr42
		}
		switch {
		case data[(p)] < 48:
			switch {
			case data[(p)] > 13:
				if 45 <= data[(p)] && data[(p)] <= 46 {
					goto tr42
				}
			case data[(p)] >= 9:
				goto tr45
			}
		case data[(p)] > 57:
			switch {
			case data[(p)] > 90:
				if 97 <= data[(p)] && data[(p)] <= 122 {
					goto tr43
				}
			case data[(p)] >= 65:
				goto tr43
			}
		default:
			goto tr43
		}
		goto st2
	tr45:
//line common.rl:65

		event.SetHostname(data[tok:p])

		goto st25
	st25:
		if (p)++; (p) == (pe) {
			goto _test_eof25
		}
	st_case_25:
//line parser.go:840
		switch data[(p)] {
		case 32:
			goto tr0
		case 91:
			goto tr0
		case 93:
			goto tr0
		}
		if 9 <= data[(p)] && data[(p)] <= 13 {
			goto tr0
		}
		goto tr47
	tr47:
//line common.rl:3

		fmt.Println(tok)
		fmt.Println(p)
		fmt.Println("---")
		tok = p

		goto st26
	st26:
		if (p)++; (p) == (pe) {
			goto _test_eof26
		}
	st_case_26:
//line parser.go:867
		switch data[(p)] {
		case 32:
			goto st2
		case 58:
			goto tr49
		case 91:
			goto tr50
		case 93:
			goto st2
		}
		if 9 <= data[(p)] && data[(p)] <= 13 {
			goto st2
		}
		goto st26
	tr49:
//line common.rl:69

		event.SetProgram(data[tok:p])

		goto st27
	st27:
		if (p)++; (p) == (pe) {
			goto _test_eof27
		}
	st_case_27:
//line parser.go:893
		switch data[(p)] {
		case 32:
			goto st28
		case 58:
			goto tr49
		case 91:
			goto tr50
		case 93:
			goto st2
		}
		if 9 <= data[(p)] && data[(p)] <= 13 {
			goto st28
		}
		goto st26
	st28:
		if (p)++; (p) == (pe) {
			goto _test_eof28
		}
	st_case_28:
		goto tr0
	tr50:
//line common.rl:69

		event.SetProgram(data[tok:p])

		goto st29
	st29:
		if (p)++; (p) == (pe) {
			goto _test_eof29
		}
	st_case_29:
//line parser.go:925
		if 48 <= data[(p)] && data[(p)] <= 57 {
			goto tr52
		}
		goto st2
	tr52:
//line common.rl:3

		fmt.Println(tok)
		fmt.Println(p)
		fmt.Println("---")
		tok = p

		goto st30
	st30:
		if (p)++; (p) == (pe) {
			goto _test_eof30
		}
	st_case_30:
//line parser.go:944
		if data[(p)] == 93 {
			goto tr54
		}
		if 48 <= data[(p)] && data[(p)] <= 57 {
			goto st30
		}
		goto st2
	tr54:
//line common.rl:73

		event.SetPid(data[tok:p])

		goto st31
	st31:
		if (p)++; (p) == (pe) {
			goto _test_eof31
		}
	st_case_31:
//line parser.go:963
		if data[(p)] == 58 {
			goto st32
		}
		goto st2
	st32:
		if (p)++; (p) == (pe) {
			goto _test_eof32
		}
	st_case_32:
		if data[(p)] == 32 {
			goto st28
		}
		if 9 <= data[(p)] && data[(p)] <= 13 {
			goto st28
		}
		goto st2
	tr46:
//line common.rl:54

		if p-1 > 0 {
			for _, b := range noDuplicates {
				if data[p] == b && data[p-1] == b {
					p = tok - 1
					{
						goto st1
					}
				}
			}
		}

//line common.rl:65

		event.SetHostname(data[tok:p])

		goto st33
	st33:
		if (p)++; (p) == (pe) {
			goto _test_eof33
		}
	st_case_33:
//line parser.go:1002
		switch data[(p)] {
		case 32:
			goto st25
		case 58:
			goto tr57
		case 95:
			goto tr42
		}
		switch {
		case data[(p)] < 48:
			switch {
			case data[(p)] > 13:
				if 45 <= data[(p)] && data[(p)] <= 46 {
					goto tr42
				}
			case data[(p)] >= 9:
				goto st25
			}
		case data[(p)] > 57:
			switch {
			case data[(p)] > 90:
				if 97 <= data[(p)] && data[(p)] <= 122 {
					goto tr43
				}
			case data[(p)] >= 65:
				goto tr43
			}
		default:
			goto tr43
		}
		goto st2
	tr57:
//line common.rl:54

		if p-1 > 0 {
			for _, b := range noDuplicates {
				if data[p] == b && data[p-1] == b {
					p = tok - 1
					{
						goto st1
					}
				}
			}
		}

		goto st34
	tr58:
//line common.rl:54

		if p-1 > 0 {
			for _, b := range noDuplicates {
				if data[p] == b && data[p-1] == b {
					p = tok - 1
					{
						goto st1
					}
				}
			}
		}

//line common.rl:65

		event.SetHostname(data[tok:p])

		goto st34
	st34:
		if (p)++; (p) == (pe) {
			goto _test_eof34
		}
	st_case_34:
//line parser.go:1069
		switch data[(p)] {
		case 32:
			goto tr45
		case 58:
			goto tr58
		case 95:
			goto tr42
		}
		switch {
		case data[(p)] < 48:
			switch {
			case data[(p)] > 13:
				if 45 <= data[(p)] && data[(p)] <= 46 {
					goto tr42
				}
			case data[(p)] >= 9:
				goto tr45
			}
		case data[(p)] > 57:
			switch {
			case data[(p)] > 90:
				if 97 <= data[(p)] && data[(p)] <= 122 {
					goto tr43
				}
			case data[(p)] >= 65:
				goto tr43
			}
		default:
			goto tr43
		}
		goto st2
	tr41:
//line common.rl:3

		fmt.Println(tok)
		fmt.Println(p)
		fmt.Println("---")
		tok = p

//line common.rl:54

		if p-1 > 0 {
			for _, b := range noDuplicates {
				if data[p] == b && data[p-1] == b {
					p = tok - 1
					{
						goto st1
					}
				}
			}
		}

		goto st35
	tr44:
//line common.rl:54

		if p-1 > 0 {
			for _, b := range noDuplicates {
				if data[p] == b && data[p-1] == b {
					p = tok - 1
					{
						goto st1
					}
				}
			}
		}

		goto st35
	st35:
		if (p)++; (p) == (pe) {
			goto _test_eof35
		}
	st_case_35:
//line parser.go:1139
		switch data[(p)] {
		case 58:
			goto tr57
		case 95:
			goto tr42
		}
		switch {
		case data[(p)] < 48:
			if 45 <= data[(p)] && data[(p)] <= 46 {
				goto tr42
			}
		case data[(p)] > 57:
			switch {
			case data[(p)] > 90:
				if 97 <= data[(p)] && data[(p)] <= 122 {
					goto tr43
				}
			case data[(p)] >= 65:
				goto tr43
			}
		default:
			goto tr43
		}
		goto st2
	tr35:
//line common.rl:42

		event.SetSecond(data[tok:p])

//line common.rl:3

		fmt.Println(tok)
		fmt.Println(p)
		fmt.Println("---")
		tok = p

		goto st36
	tr69:
//line common.rl:46

		event.SetNanosecond(data[tok:p])

//line common.rl:3

		fmt.Println(tok)
		fmt.Println(p)
		fmt.Println("---")
		tok = p

		goto st36
	st36:
		if (p)++; (p) == (pe) {
			goto _test_eof36
		}
	st_case_36:
//line parser.go:1195
		if 48 <= data[(p)] && data[(p)] <= 57 {
			goto st37
		}
		goto st2
	st37:
		if (p)++; (p) == (pe) {
			goto _test_eof37
		}
	st_case_37:
		if 48 <= data[(p)] && data[(p)] <= 57 {
			goto st38
		}
		goto st2
	st38:
		if (p)++; (p) == (pe) {
			goto _test_eof38
		}
	st_case_38:
		switch data[(p)] {
		case 32:
			goto tr61
		case 58:
			goto tr63
		}
		switch {
		case data[(p)] > 13:
			if 48 <= data[(p)] && data[(p)] <= 57 {
				goto st39
			}
		case data[(p)] >= 9:
			goto tr61
		}
		goto st2
	st39:
		if (p)++; (p) == (pe) {
			goto _test_eof39
		}
	st_case_39:
		if 48 <= data[(p)] && data[(p)] <= 57 {
			goto st40
		}
		goto st2
	st40:
		if (p)++; (p) == (pe) {
			goto _test_eof40
		}
	st_case_40:
		switch data[(p)] {
		case 32:
			goto tr61
		case 58:
			goto tr65
		}
		if 9 <= data[(p)] && data[(p)] <= 13 {
			goto tr61
		}
		goto st2
	tr37:
//line common.rl:42

		event.SetSecond(data[tok:p])

		goto st41
	tr65:
//line common.rl:77

		event.SetTimeZone(data[tok:p])

		goto st41
	tr71:
//line common.rl:46

		event.SetNanosecond(data[tok:p])

		goto st41
	st41:
		if (p)++; (p) == (pe) {
			goto _test_eof41
		}
	st_case_41:
//line parser.go:1276
		if data[(p)] == 32 {
			goto st22
		}
		if 9 <= data[(p)] && data[(p)] <= 13 {
			goto st22
		}
		goto st2
	tr63:
//line common.rl:77

		event.SetTimeZone(data[tok:p])

		goto st42
	st42:
		if (p)++; (p) == (pe) {
			goto _test_eof42
		}
	st_case_42:
//line parser.go:1295
		if data[(p)] == 32 {
			goto st22
		}
		switch {
		case data[(p)] > 13:
			if 48 <= data[(p)] && data[(p)] <= 57 {
				goto st39
			}
		case data[(p)] >= 9:
			goto st22
		}
		goto st2
	tr36:
//line common.rl:42

		event.SetSecond(data[tok:p])

		goto st43
	st43:
		if (p)++; (p) == (pe) {
			goto _test_eof43
		}
	st_case_43:
//line parser.go:1319
		if 48 <= data[(p)] && data[(p)] <= 57 {
			goto tr67
		}
		goto st2
	tr67:
//line common.rl:3

		fmt.Println(tok)
		fmt.Println(p)
		fmt.Println("---")
		tok = p

		goto st44
	st44:
		if (p)++; (p) == (pe) {
			goto _test_eof44
		}
	st_case_44:
//line parser.go:1338
		switch data[(p)] {
		case 32:
			goto tr68
		case 43:
			goto tr69
		case 45:
			goto tr69
		case 58:
			goto tr71
		case 90:
			goto tr72
		case 122:
			goto tr72
		}
		switch {
		case data[(p)] > 13:
			if 48 <= data[(p)] && data[(p)] <= 57 {
				goto st44
			}
		case data[(p)] >= 9:
			goto tr68
		}
		goto st2
	tr38:
//line common.rl:42

		event.SetSecond(data[tok:p])

//line common.rl:3

		fmt.Println(tok)
		fmt.Println(p)
		fmt.Println("---")
		tok = p

		goto st45
	tr72:
//line common.rl:46

		event.SetNanosecond(data[tok:p])

//line common.rl:3

		fmt.Println(tok)
		fmt.Println(p)
		fmt.Println("---")
		tok = p

		goto st45
	st45:
		if (p)++; (p) == (pe) {
			goto _test_eof45
		}
	st_case_45:
//line parser.go:1393
		switch data[(p)] {
		case 32:
			goto tr61
		case 43:
			goto st36
		case 45:
			goto st36
		case 58:
			goto tr65
		}
		if 9 <= data[(p)] && data[(p)] <= 13 {
			goto tr61
		}
		goto st2
	tr26:
//line common.rl:3

		fmt.Println(tok)
		fmt.Println(p)
		fmt.Println("---")
		tok = p

		goto st46
	st46:
		if (p)++; (p) == (pe) {
			goto _test_eof46
		}
	st_case_46:
//line parser.go:1422
		if 48 <= data[(p)] && data[(p)] <= 51 {
			goto st15
		}
		goto st2
	st47:
		if (p)++; (p) == (pe) {
			goto _test_eof47
		}
	st_case_47:
		if data[(p)] == 58 {
			goto st48
		}
		if 48 <= data[(p)] && data[(p)] <= 57 {
			goto st47
		}
		goto st2
	st48:
		if (p)++; (p) == (pe) {
			goto _test_eof48
		}
	st_case_48:
		if data[(p)] == 32 {
			goto tr74
		}
		if 9 <= data[(p)] && data[(p)] <= 13 {
			goto tr74
		}
		goto st2
	tr74:
//line common.rl:3

		fmt.Println(tok)
		fmt.Println(p)
		fmt.Println("---")
		tok = p

		goto st49
	st49:
		if (p)++; (p) == (pe) {
			goto _test_eof49
		}
	st_case_49:
//line parser.go:1465
		switch data[(p)] {
		case 65:
			goto tr77
		case 68:
			goto tr78
		case 70:
			goto tr79
		case 74:
			goto tr80
		case 77:
			goto tr81
		case 78:
			goto tr82
		case 79:
			goto tr83
		case 83:
			goto tr84
		}
		if 48 <= data[(p)] && data[(p)] <= 57 {
			goto tr76
		}
		goto tr75
	tr76:
//line common.rl:81

		event.SetSequence(data[tok:p])

//line common.rl:3

		fmt.Println(tok)
		fmt.Println(p)
		fmt.Println("---")
		tok = p

		goto st50
	st50:
		if (p)++; (p) == (pe) {
			goto _test_eof50
		}
	st_case_50:
//line parser.go:1506
		if 48 <= data[(p)] && data[(p)] <= 57 {
			goto st51
		}
		goto st2
	st51:
		if (p)++; (p) == (pe) {
			goto _test_eof51
		}
	st_case_51:
		if 48 <= data[(p)] && data[(p)] <= 57 {
			goto st52
		}
		goto st2
	st52:
		if (p)++; (p) == (pe) {
			goto _test_eof52
		}
	st_case_52:
		if 48 <= data[(p)] && data[(p)] <= 57 {
			goto st53
		}
		goto st2
	st53:
		if (p)++; (p) == (pe) {
			goto _test_eof53
		}
	st_case_53:
		if data[(p)] == 45 {
			goto tr17
		}
		goto st2
	tr3:
//line common.rl:3

		fmt.Println(tok)
		fmt.Println(p)
		fmt.Println("---")
		tok = p

		goto st54
	tr77:
//line common.rl:81

		event.SetSequence(data[tok:p])

//line common.rl:3

		fmt.Println(tok)
		fmt.Println(p)
		fmt.Println("---")
		tok = p

		goto st54
	st54:
		if (p)++; (p) == (pe) {
			goto _test_eof54
		}
	st_case_54:
//line parser.go:1565
		switch data[(p)] {
		case 112:
			goto st55
		case 117:
			goto st76
		}
		goto st2
	st55:
		if (p)++; (p) == (pe) {
			goto _test_eof55
		}
	st_case_55:
		if data[(p)] == 114 {
			goto st56
		}
		goto st2
	st56:
		if (p)++; (p) == (pe) {
			goto _test_eof56
		}
	st_case_56:
		switch data[(p)] {
		case 32:
			goto tr91
		case 105:
			goto st74
		}
		if 9 <= data[(p)] && data[(p)] <= 13 {
			goto tr91
		}
		goto st2
	tr91:
//line common.rl:18

		event.SetMonth(data[tok:p])

		goto st57
	st57:
		if (p)++; (p) == (pe) {
			goto _test_eof57
		}
	st_case_57:
//line parser.go:1608
		switch data[(p)] {
		case 32:
			goto st58
		case 51:
			goto tr95
		}
		switch {
		case data[(p)] < 49:
			if 9 <= data[(p)] && data[(p)] <= 13 {
				goto st58
			}
		case data[(p)] > 50:
			if 52 <= data[(p)] && data[(p)] <= 57 {
				goto tr96
			}
		default:
			goto tr94
		}
		goto st2
	st58:
		if (p)++; (p) == (pe) {
			goto _test_eof58
		}
	st_case_58:
		if 49 <= data[(p)] && data[(p)] <= 57 {
			goto tr96
		}
		goto st2
	tr96:
//line common.rl:3

		fmt.Println(tok)
		fmt.Println(p)
		fmt.Println("---")
		tok = p

		goto st59
	st59:
		if (p)++; (p) == (pe) {
			goto _test_eof59
		}
	st_case_59:
//line parser.go:1651
		if data[(p)] == 32 {
			goto tr97
		}
		if 9 <= data[(p)] && data[(p)] <= 13 {
			goto tr97
		}
		goto st2
	tr97:
//line common.rl:30

		event.SetDay(data[tok:p])

		goto st60
	st60:
		if (p)++; (p) == (pe) {
			goto _test_eof60
		}
	st_case_60:
//line parser.go:1670
		if data[(p)] == 50 {
			goto tr99
		}
		if 48 <= data[(p)] && data[(p)] <= 49 {
			goto tr98
		}
		goto st2
	tr98:
//line common.rl:3

		fmt.Println(tok)
		fmt.Println(p)
		fmt.Println("---")
		tok = p

		goto st61
	st61:
		if (p)++; (p) == (pe) {
			goto _test_eof61
		}
	st_case_61:
//line parser.go:1692
		if 48 <= data[(p)] && data[(p)] <= 57 {
			goto st62
		}
		goto st2
	st62:
		if (p)++; (p) == (pe) {
			goto _test_eof62
		}
	st_case_62:
		if data[(p)] == 58 {
			goto tr101
		}
		goto st2
	tr101:
//line common.rl:34

		event.SetHour(data[tok:p])

		goto st63
	st63:
		if (p)++; (p) == (pe) {
			goto _test_eof63
		}
	st_case_63:
//line parser.go:1717
		if 48 <= data[(p)] && data[(p)] <= 53 {
			goto tr102
		}
		goto st2
	tr102:
//line common.rl:3

		fmt.Println(tok)
		fmt.Println(p)
		fmt.Println("---")
		tok = p
